# anba4

./: environment.yml  pyproject.toml  setup.py
.github/workflows/: CI_anba4.yml  ci.yml
anba4/: __init__.py  anba_model.py  data_model.py  fe_basis.py  solvers.py  utils.py
anba4/fea/: fe_functions.py
anba4/material/: __init__.py  material_wrapper.py
anba4/solvers/: stress.py
data/: anba_model.py
examples/: QuadMesh.py  anbax_CUS.py  anbax_C_json.py  anbax_C_section.py  anbax_Omega_section.py  anbax_isotropic.py  anbax_isotropic_singular.py  anbax_multimat_with_hole.py  anbax_multimat_with_hole2.py  anbax_principal_axes.py  anbax_rotation.py  anbax_rotation_multimat.py  anbax_rotation_multimat_singular.py  anbax_rotation_singular.py  mesh.json
examples/test/: test_anbax_isotropic.py  test_run_Examples.py
fea/: chains.py
solvers/: inertia.py
src/anba4/: __init__.py  data_model.py  utils.py  voight_notation.py
src/anba4/cli/: main.py  unit_loadcases.py
src/anba4/core/: __init__.py  utils.py
src/anba4/data/: anba_model.py  data_model.py
src/anba4/fea/: chains.py  fe_functions.py
src/anba4/io/: export.py
src/anba4/material/: __init__.py  expressions.py  isotropic.py  material_py.py  orthotropic.py
src/anba4/solvers/: inertia.py  (+3 more)
tests/: test_C_section.py  test_isotropic_regular_vs_singular.py  test_isotropic_unittest_migrated.py  test_multimat_with_hole_regular_vs_singular.py  test_multimat_with_hole_vs_hole2.py  test_principal_axes.py  test_rotation_multimat_regular_vs_singular.py  test_rotation_regular_vs_singular.py  test_run_examples.py
(+1 files in other folders)
