[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anba4"
version = "0.0.1"
description = "ANBA4 - ANisotropic Beam Analysis"
authors = [{name = "Marco Morandini"}]
dependencies = [
  "numpy",
  "fenics-dolfin",
  "petsc4py",
  "pydantic"
]

[project.scripts]
anba = "anba4.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

