[project]
name = "anba4"
version = "0.1.0"
description = "Anisotropic Beam Analysis"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.9"
dependencies = [
    "dolfin",
    "mshr",
    "pyvista",
    "petsc4py",
    "numpy",
    "pydantic",
    "click",
]

[project.scripts]
anba4 = "anba4.cli.main:run"

