[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anba4"
version = "0.1.0"
dependencies = [
    "numpy",
    "pyvista",
    "fenics",
    "multiprocessing",
    "json",
    "os",
    "argparse",
]

[project.scripts]
anba4-run = "anba4.cli.main:main"
